--- a/frontend/src/pages/playerComponents/dialog.css
+++ b/frontend/src/pages/playerComponents/dialog.css
@@ -20,6 +20,7 @@
   transform: translate(-50%, -50%);
   width: 90vw;
   max-height: 85vh;
+  max-width: 35rem;
   padding: 25px;
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
   z-index: 1001;
